# svar

./: .pre-commit-config.yaml  .tarpaulin.toml  Cargo.toml  README.md  _typos.toml  cargo_readme_template.tpl  rustfmt.toml
.github/workflows/: test.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: init_logging.rs  main.rs
crates/cli/src/logic/: get_input.rs  mod.rs  run.rs
crates/cli/src/models/: error.rs
crates/core/: Cargo.toml  README.md  cargo_readme_template.tpl
crates/core/src/: lib.rs  security_questions_sealed.rs
crates/core/src/encryption/: aes_gcm_256.rs  aes_gcm_sealed_box.rs  encryption_key.rs  encryption_scheme.rs  versioned_encryption.rs
crates/core/src/encryption/snapshots/: svar_core__encryption__encryption_scheme__tests__display.snap  svar_core__encryption__encryption_scheme__tests__json_.snap  svar_core__encryption__encryption_scheme__tests__json_snapshot.snap
crates/core/src/fixtures/: svar_core__security_questions_sealed__tests__serialize.json
crates/core/src/kdf/: is_security_questions_kdf_scheme.rs  security_questions_keys_from_questions_and_answer_scheme.rs
crates/core/src/kdf/snapshots/: svar_core__kdf__security_questions_keys_from_questions_and_answer_scheme__tests__debug_works.snap  svar_core__kdf__security_questions_keys_from_questions_and_answer_scheme__tests__serialize.snap
crates/core/src/kdf/sub_kdf/entropies_from_questions_answer_and_salt/: keys_from_questions_and_answers_lower_trim_utf8.rs  mod.rs  security_question_and_answer_as_bytes.rs  security_question_answer_as_bytes.rs  test_lower_trim_utf8.rs
crates/core/src/kdf/sub_kdf/security_questions_encryption_keys_by_xor_entropies/: mod.rs  security_questions_encryption_keys_by_xor_entropies.rs
crates/core/src/models/: encryption_key.rs  encryption_keys.rs  error.rs  exactly_n_bytes.rs  has_sample_values.rs  hex_bytes.rs  is_secret.rs  mod.rs  secure_random_bytes.rs
crates/core/src/models/answer/: mod.rs  security_question_answer_and_salt.rs  security_questions_and_answers.rs  security_questions_answers_and_salts.rs
crates/core/src/models/answer/snapshots/: svar_core__models__answer__security_questions_answers_and_salts__tests__serialize.snap
crates/core/src/models/mnemonic/: mnemonic.rs  mod.rs
crates/core/src/models/question/: mod.rs  security_question.rs  security_question_and_salt.rs  security_question_expected_answer_format.rs  security_question_kind.rs  security_questions_and_salts.rs
crates/core/src/models/question/snapshots/: svar_core__models__question__security_questions_and_salts__tests__serialize.snap
crates/core/src/models/snapshots/: svar_core__models__hex_bytes__tests__hex_bytes_debug.snap  svar_core__models__hex_bytes__tests__hex_bytes_display.snap  svar_core__models__hex_bytes__tests__serde.snap
crates/core/src/security_questions/: mod.rs  security_questions_sealed_mnemonic.rs
crates/core/src/security_questions/answer/: security_question_and_answer.rs  security_question_answer_and_salt.rs  security_questions_answers_and_salts.rs
crates/core/src/security_questions/kdf/: mod.rs  security_questions_keys_from_questions_and_answer_scheme.rs
crates/core/src/security_questions/kdf/sub_kdf/: mod.rs
crates/core/src/security_questions/kdf/sub_kdf/entropies_from_questions_answer_and_salt/: keys_from_questions_and_answers_lower_trim_utf8.rs  mod.rs
crates/core/src/security_questions/kdf/sub_kdf/security_questions_encryption_keys_by_xor_entropies/: mod.rs
crates/core/src/security_questions/question/: mod.rs  security_question_kind.rs  security_questions.rs
scripts/: cargo_readme.sh  run_cargo_readme_install_if_needed.sh
yellow_paper/: yellow_paper.md
