[workspace]
resolver = "3"
members = ["crates/cli", "crates/core"]

[workspace.dependencies]
# Internal dependencies
svar-core = { path = "crates/core", version = "0.1.0" }

# External dependencies
aes-gcm = { version = "=0.10.3", default-features = false, features = [
    "aes",
    "alloc",
    "getrandom",
    "zeroize",
] }
derive_more = { version = "2.0.1", features = ["full"] }
hex = "0.4.3"
hkdf = { version = "=0.12.4", default-features = false }
itertools = { version = "0.14.0", features = ["default"] }
indexmap = { version = "2.9.0", features = ["serde"] }
insta = { version = "1.43.1", features = ["json"] }
log = "0.4.27"
pretty_assertions = "1.4.1"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_repr = { version = "0.1.17", default-features = false }
serde_json = "1.0.114"
sha2 = "0.10.9"
strum = { version = "0.27", features = ["derive"] }
test-log = { version = "0.2.17" }
thiserror = "2.0.12"
zeroize = { version = "1.7.0", default-features = false, features = [
    "zeroize_derive",
    "derive",
] }
